fixed FROM typos

--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -1,10 +1,10 @@
-FROM golang:bullseye --platform linux/arm64 AS easy-novnc-build
+FROM --platform linux/arm64 golang:bullseye AS easy-novnc-build
 WORKDIR /src
 RUN go mod init build && \
     go get github.com/geek1011/easy-novnc@v1.1.0 && \
     go build -o /bin/easy-novnc github.com/geek1011/easy-novnc
 
-FROM ubuntu:focal --platform linux/arm64
+FROM --platform linux/arm64 ubuntu:focal
 ENV DEBIAN_FRONTEND=noninteractive 
 
 RUN apt-get update -y && \
