--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -26,5 +26,6 @@ RUN echo 'pref("browser.tabs.remote.autostart", false);' >> /etc/firefox/syspref
 RUN mkdir -p /root/.config/tint2
 COPY tint2rc /root/.config/tint2/
 
+ENV USER=root
 EXPOSE 8080
 ENTRYPOINT ["/bin/bash", "-c", "/usr/bin/supervisord"]
