Update Dockerfiles to use Ubuntu 22.04 and golang:1.23; consolidate package installations and update README for clarity

--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -1,19 +1,16 @@
-FROM --platform=linux/arm64 golang:bullseye AS easy-novnc-build
+FROM --platform=linux/arm64 golang:1.23 AS easy-novnc-build
 WORKDIR /src
 RUN go mod init build && \
-    go get github.com/geek1011/easy-novnc@v1.1.0 && \
+    go get github.com/geek1011/easy-novnc@latest && \
     go build -o /bin/easy-novnc github.com/geek1011/easy-novnc
 
-FROM --platform=linux/arm64 ubuntu:focal
+FROM --platform=linux/arm64 ubuntu:22.04
 ENV DEBIAN_FRONTEND=noninteractive 
 
 RUN apt-get update -y && \
-    apt-get install -y --no-install-recommends openbox tint2 xdg-utils lxterminal hsetroot xfonts-base tightvncserver supervisor && \
-    rm -rf /var/lib/apt/lists
-
-RUN apt-get update -y && \
-    apt-get install -y --no-install-recommends vim openssh-client wget curl rsync ca-certificates apulse libpulse0 firefox htop tar xzip gzip bzip2 zip unzip && \
-    rm -rf /var/lib/apt/lists
+    apt-get install -y --no-install-recommends openbox tint2 xdg-utils lxterminal hsetroot tigervnc-standalone-server supervisor vim openssh-client wget curl rsync ca-certificates apulse libpulse0 firefox htop tar xzip gzip bzip2 zip unzip && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 COPY --from=easy-novnc-build /bin/easy-novnc /usr/local/bin/
 COPY supervisord_arm64.conf /etc/supervisord.conf
