Refactor Dockerfiles to use Debian Bookworm slim, implement non-root user for security, and update Firefox to ESR; enhance README for clarity and usage instructions

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 pidfile=/tmp/supervisord.pid
 logfile=/dev/fd/1
 logfile_maxbytes=0
-user=root
+user=desktop
 
 [program:x11]
 priority=0
@@ -24,7 +24,7 @@ redirect_stderr=true
 [program:openbox]
 priority=1
 command=/usr/bin/openbox-session
-environment=DISPLAY=:0
+environment=DISPLAY=:0,HOME=/home/desktop,USER=desktop
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -33,7 +33,7 @@ redirect_stderr=true
 [program:tint2]
 priority=1
 command=tint2
-environment=DISPLAY=:0
+environment=DISPLAY=:0,HOME=/home/desktop,USER=desktop
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
