--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,7 +1,7 @@
 [supervisord]
 nodaemon=true
 pidfile=/tmp/supervisord.pid
-logfile=/dev/fd/1
+logfile=/tmp/supervisord.log
 logfile_maxbytes=0
 user=desktop
 
@@ -9,7 +9,7 @@ user=desktop
 priority=0
 command=/usr/bin/Xtigervnc -desktop "noVNC" -localhost -rfbport 5900 -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
 autorestart=true
-stdout_logfile=/dev/fd/1
+stdout_logfile=/tmp/x11.log
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
@@ -17,7 +17,7 @@ redirect_stderr=true
 priority=0
 command=/usr/local/bin/easy-novnc --addr :8080 --host localhost --port 5900 --no-url-password --novnc-params "resize=remote"
 autorestart=true
-stdout_logfile=/dev/fd/1
+stdout_logfile=/tmp/easy-novnc.log
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
@@ -26,7 +26,7 @@ priority=1
 command=/usr/bin/openbox-session
 environment=DISPLAY=:0,HOME=/home/desktop,USER=desktop
 autorestart=true
-stdout_logfile=/dev/fd/1
+stdout_logfile=/tmp/openbox.log
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
@@ -35,7 +35,7 @@ priority=1
 command=tint2
 environment=DISPLAY=:0,HOME=/home/desktop,USER=desktop
 autorestart=true
-stdout_logfile=/dev/fd/1
+stdout_logfile=/tmp/tint2.log
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
