Add file ownership management to initialization script and update docker-compose configuration
- Added environment variables for HOST_UID and HOST_GID in docker-compose.yaml
- Enhanced init-desktop.sh to detect and modify the desktop user UID/GID based on host user or volume ownership
- Implemented ownership fixing for existing files in the home directory
- Updated README to document file ownership management features and usage instructions

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,9 @@ services:
       - "8080:8080"
     volumes:
       - ./home-desktop:/home/desktop:Z
+    environment:
+      - HOST_UID=${HOST_UID}
+      - HOST_GID=${HOST_GID}
     restart: unless-stopped
     stdin_open: true
     tty: true
