--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,9 +10,8 @@ services:
       - "8080:8080"
     volumes:
       - ./home-desktop:/home/desktop:Z
-    environment:
-      - HOST_UID=${HOST_UID}
-      - HOST_GID=${HOST_GID}
+    # For Podman: keep the host user's UID/GID mapping
+    userns_mode: keep-id
     restart: unless-stopped
     stdin_open: true
     tty: true
