--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 pidfile=/tmp/supervisord.pid
 logfile=/tmp/supervisord.log
 logfile_maxbytes=0
-user=desktop
+# user=desktop  # Commented out for userns_mode: keep-id compatibility
 
 [program:x11]
 priority=0
