Update docker-compose and README to clarify UID/GID usage
- Added note in docker-compose.yaml to specify how to run with host UID/GID.
- Updated README.md to emphasize the need to export UID and GID before running docker-compose.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - ./home-desktop:/home/desktop
     # For Docker: pass host user's UID/GID to reconfigure desktop user
     # Container starts as root, then docker-entrypoint.sh switches to desktop user
+    # Note: Run with: UID=$(id -u) GID=$(id -g) docker-compose up -d
     environment:
       - HOST_UID=${UID:-1000}
       - HOST_GID=${GID:-1000}
